BEGIN;

CREATE TABLE IF NOT EXISTS test.dimensioner_bredde
(
    bredde_id serial NOT NULL,
    bredde integer NOT NULL,
    CONSTRAINT dimensioner_bredde_pkey PRIMARY KEY (bredde_id),
    CONSTRAINT unique_bredde UNIQUE (bredde)
);

CREATE TABLE IF NOT EXISTS test.dimensioner_laengde
(
    laengde_id serial NOT NULL,
    laengde integer NOT NULL,
    CONSTRAINT dimensioner_laengde_pkey PRIMARY KEY (laengde_id),
    CONSTRAINT uniqe_laengde UNIQUE (laengde)
);

CREATE TABLE IF NOT EXISTS test.order_item
(
    order_item_id serial NOT NULL,
    order_id integer,
    product_variant_id integer,
    quantity integer,
    description character varying(100) COLLATE pg_catalog."default",
    CONSTRAINT order_item_pkey PRIMARY KEY (order_item_id)
);

CREATE TABLE IF NOT EXISTS test.orders
(
    order_id serial NOT NULL,
    date_placed date DEFAULT now(),
    status character varying(64) COLLATE pg_catalog."default" NOT NULL,
    bredde integer,
    laengde integer,
    spaer_og_rem_materiale character varying COLLATE pg_catalog."default",
    tag_materiale character varying COLLATE pg_catalog."default",
    tag_type character varying COLLATE pg_catalog."default",
    skur character varying COLLATE pg_catalog."default",
    username character varying COLLATE pg_catalog."default",
    CONSTRAINT orders_pkey PRIMARY KEY (order_id)
);

CREATE TABLE IF NOT EXISTS test.product
(
    product_id serial NOT NULL,
    name character varying(100) COLLATE pg_catalog."default",
    unit character varying COLLATE pg_catalog."default",
    price integer,
    CONSTRAINT product_pkey PRIMARY KEY (product_id)
);

CREATE TABLE IF NOT EXISTS test.product_variant
(
    product_variant_id serial NOT NULL,
    length integer,
    product_id integer,
    CONSTRAINT product_variant_pkey PRIMARY KEY (product_variant_id)
);

CREATE TABLE IF NOT EXISTS test.skur
(
    id serial NOT NULL,
    skur character varying COLLATE pg_catalog."default",
    CONSTRAINT skur_pkey PRIMARY KEY (id),
    CONSTRAINT fk_skur UNIQUE (skur)
);

CREATE TABLE IF NOT EXISTS test.spaer_og_rem
(
    spaer_og_rem_id serial NOT NULL,
    materiale character varying(64) COLLATE pg_catalog."default" NOT NULL,
    CONSTRAINT spaer_og_rem_pkey PRIMARY KEY (spaer_og_rem_id),
    CONSTRAINT unique_spaer_og_rem UNIQUE (materiale)
);

CREATE TABLE IF NOT EXISTS test.tag_materiale
(
    id serial NOT NULL,
    materiale character varying(64) COLLATE pg_catalog."default" NOT NULL,
    CONSTRAINT tag_materiale_pkey PRIMARY KEY (id),
    CONSTRAINT unique_tag_materiale UNIQUE (materiale)
);

CREATE TABLE IF NOT EXISTS test.users
(
    user_id serial NOT NULL,
    username character varying(64) COLLATE pg_catalog."default" NOT NULL,
    password character varying(64) COLLATE pg_catalog."default" NOT NULL,
    role character varying(12) COLLATE pg_catalog."default" NOT NULL,
    CONSTRAINT users_pkey PRIMARY KEY (user_id),
    CONSTRAINT users_username_key UNIQUE (username)
);

ALTER TABLE IF EXISTS test.order_item
    ADD CONSTRAINT order_item_product_variant_id_fkey FOREIGN KEY (product_variant_id)
        REFERENCES test.product_variant (product_variant_id) MATCH SIMPLE
        ON UPDATE NO ACTION
        ON DELETE NO ACTION;

ALTER TABLE IF EXISTS test.orders
    ADD CONSTRAINT fk_bredde FOREIGN KEY (bredde)
        REFERENCES test.dimensioner_bredde (bredde) MATCH SIMPLE
        ON UPDATE NO ACTION
        ON DELETE NO ACTION
        NOT VALID;

ALTER TABLE IF EXISTS test.orders
    ADD CONSTRAINT fk_laengde FOREIGN KEY (laengde)
        REFERENCES test.dimensioner_laengde (laengde) MATCH SIMPLE
        ON UPDATE NO ACTION
        ON DELETE NO ACTION
        NOT VALID;

ALTER TABLE IF EXISTS test.orders
    ADD CONSTRAINT fk_skur FOREIGN KEY (skur)
        REFERENCES test.skur (skur) MATCH SIMPLE
        ON UPDATE NO ACTION
        ON DELETE NO ACTION
        NOT VALID;

ALTER TABLE IF EXISTS test.orders
    ADD CONSTRAINT fk_spaer_og_rem_materiale FOREIGN KEY (spaer_og_rem_materiale)
        REFERENCES test.spaer_og_rem (materiale) MATCH SIMPLE
        ON UPDATE NO ACTION
        ON DELETE NO ACTION
        NOT VALID;

ALTER TABLE IF EXISTS test.orders
    ADD CONSTRAINT fk_tag_materiale FOREIGN KEY (tag_materiale)
        REFERENCES test.tag_materiale (materiale) MATCH SIMPLE
        ON UPDATE NO ACTION
        ON DELETE NO ACTION
        NOT VALID;

ALTER TABLE IF EXISTS test.orders
    ADD CONSTRAINT fk_username FOREIGN KEY (username)
        REFERENCES test.users (username) MATCH SIMPLE
        ON UPDATE NO ACTION
        ON DELETE NO ACTION
        NOT VALID;

ALTER TABLE IF EXISTS test.product_variant
    ADD CONSTRAINT product_variant_product_id_fkey FOREIGN KEY (product_id)
        REFERENCES test.product (product_id) MATCH SIMPLE
        ON UPDATE NO ACTION
        ON DELETE NO ACTION;

INSERT INTO test.dimensioner_bredde (bredde, bredde_id)
VALUES
    (270, 1),
    (300, 2),
    (330, 3),
    (360, 4),
    (390, 5),
    (420, 6),
    (450, 7),
    (480, 8),
    (510, 9),
    (540, 10),
    (570, 11),
    (600, 12);

INSERT INTO test.dimensioner_laengde (laengde, laengde_id)
VALUES
    (270, 1),
    (300, 2),
    (330, 3),
    (360, 4),
    (390, 5),
    (420, 6),
    (450, 7),
    (480, 8),
    (510, 9),
    (540, 10),
    (570, 11),
    (600, 12),
    (630, 13),
    (660, 14),
    (690, 15),
    (720, 16),
    (750, 17),
    (780, 18);

INSERT INTO test.tag_materiale (materiale)
VALUES
    ('Sunlux 1300K'),
    ('Sunlux 1200N'),
    ('Benders sort'),
    ('Benders brun'),
    ('Benders tegldrød'),
    ('Benders rød'),
    ('Eternit grå B6');

INSERT INTO test.skur (id, skur)
VALUES
    (1, 'Ja'),
    (2, 'Nej');

INSERT INTO test.spaer_og_rem (spaer_og_rem_id, materiale)
VALUES
    (1, 'Benders sort'),
    (2, 'Benders brun'),
    (3, 'Benders tegldrød'),
    (4, 'Benders rød'),
    (5, 'Eternit grå B6');

END;
